--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
   "description": "My Portfolio",
   "main": "index.js",
   "author": "Andrew Nicols <andrew@nicols.co.uk>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "bootstrap": "4.0.0-alpha.5",
+    "gulp-sass": "^3.1.0"
+  }
 }
